# ub-g21-deeplearning

./: README.md
labs/lab1/pytorch/: Lab1_CNN_Cifar_SKEL.ipynb  main.ipynb  pyproject.toml
labs/lab2/: Lab 2 - Pytorch.ipynb  Lab 2 - Tensorflow.ipynb  pyproject.toml
labs/lab3/: .gitignore  Lab 03 - Pytorch.ipynb  lab3_Trasfer_Learning_SKEL.ipynb  pyproject.toml
labs/lab4/: Lab 4 - Pytorch.ipynb  Lab 4 - TF.ipynb  pyproject.toml
labs/lab5/: .gitignore  LAB06.ipynb  lab6.ipynb  pyproject.toml
projects/gic/: .gitignore  TODOs.txt  pyproject.toml
projects/gic/gic/: __init__.py  __main__.py  callbacks.py  data.py  data_dataloader.py  data_dataset.py  data_transform.py  data_utils.py  ensemble_model.py  ensemble_train.py  ensemble_valid.py  hyperparams.py  model.py  model_base.py  model_dae.py  model_densecnn.py  model_ensemble.py  model_rescnn.py  model_train.py  model_valid.py  profile.py  setup.py  setup_callbacks.py  setup_config.py  train_metrics.py  train_optimize.py  tune.py  utils.py
projects/gic/gic/learning/: ensemble.py  metrics.py  modules.py  objectives.py  wrappers.py
projects/gic/gic/learning/autoencoder/: callbacks.py  modules.py  objectives.py  wrappers.py
projects/gic/gic/learning/convnext/: modules.py  objectives.py
projects/gic/gic/learning/densecnn/: factory.py  modules.py  objectives.py  wrappers.py
projects/gic/gic/learning/focalnet/: factory.py  modules.py  objectives.py  wrappers.py
projects/gic/gic/learning/rescnn/: modules.py  objectives.py  wrappers.py
projects/gic/gic/learning/resnet/: modules.py
projects/gic/gic/models/: autoencoder.py  convnext.py  densenet.py  resnet.py
projects/gic/gic/scripts/: ensemble_train.py  ensemble_valid.py  model_train.py  model_valid.py  optimize.py
projects/gic/notebooks/: augment.ipynb  ensemble.ipynb  main.ipynb  playground.ipynb
projects/gic/src/: data.py  main.ipynb  model.py
projects/gic/submissions/: submission0.csv  submission1.csv  submission2.csv  submission3.csv  submission_4.csv  submission_6.csv
