[tool.poetry]
name = "lab3"
version = "0.1.0"
description = ""
authors = ["fusedbloxxer <voidwarden@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
torch = "^2.1.0"
torchvision = "^0.16.0"
ipykernel = "^6.26.0"
tqdm = "^4.66.1"
scipy = "^1.11.3"
matplotlib = "^3.8.1"
autopep8 = "^2.0.4"
nvitop = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
