[tool.poetry]
name = "lab5"
version = "0.1.0"
description = ""
authors = ["fusedbloxxer <voidwarden@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
torchvision = "^0.16.1"
ipykernel = "^6.27.1"
lightning = "^2.1.2"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
kornia = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
