[tool.poetry]
name = "gic"
version = "0.1.0"
description = ""
authors = ["fusedbloxxer <voidwarden@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
pandas = "^2.1.3"
torch = "^2.1.1"
torchvision = "^0.16.1"
kornia = "^0.7.0"
scikit-learn = "^1.3.2"
ipykernel = "^6.26.0"
autopep8 = "^2.0.4"
optuna = "^3.4.0"
ipywidgets = "^8.1.1"
gitpython = "^3.1.40"
torcheval = "^0.0.7"
tqdm = "^4.66.1"
nvitop = "^1.3.1"
optuna-dashboard = "^0.13.0"
wandb = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
