[tool.poetry]
name = "deeplearning-l1-pytorch"
version = "1.0.0"
description = ""
authors = ["fusedbloxxer <voidwarden@yahoo.com>"]
readme = "README.md"
packages = [{include = "deeplearning_l1_pytorch"}]

[tool.poetry.dependencies]
python = "3.11"
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
ipykernel = "^6.25.2"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.1"
numpy = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
